<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    android:padding="10dp" >

	<TextView
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="left"
		android:textSize="13sp"
		android:textColor="#fff"
		android:text="@string/post_ins"/>
		
	<EditText
		android:id="@+id/txtMensaje"
		android:layout_marginTop="15dp"
		android:layout_width="250dp"
		android:layout_height="100dp"
		android:hint="@string/msg"/>

	<TextView
	    android:id="@+id/txtStatus"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:gravity="left"
		android:textSize="13sp"
		android:textColor="#fff"
		android:text="@string/status"/>
		
	<CheckBox
		android:id="@+id/twitterCheck"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="10dp"
		android:layout_marginLeft="5dp"
		android:text="@string/twitter"
		android:textSize="14sp"
		android:clickable="true"
		android:focusable="true" 
		android:button="@drawable/twitter_check"/>

	<Button
	    android:id="@+id/button1"
	    android:layout_width="95dp"
	    android:layout_height="wrap_content"
	    android:layout_marginTop="15dp"
	    android:text="@string/post"/>

		<Button
	    android:id="@+id/btnReadA"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:text="@string/readA" />
</LinearLayout>